#764: Bypass max test session only on the first run, not when test has already failed